etc/k8s/azure/istio/monitoring/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: monitoring-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "kiali.eshoponabp.com"
    - "jaeger.eshoponabp.com"
    - "grafana.eshoponabp.com"
    - "prometheus.eshoponabp.com"
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - "kiali.eshoponabp.com"
    - "jaeger.eshoponabp.com"
    - "grafana.eshoponabp.com"
    - "prometheus.eshoponabp.com"
    # tls:
    #   mode: PASSTHROUGH
    tls:
      mode: SIMPLE
      credentialName: eshop-domain-cert-prod
